sonar bugs (#5592)